// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate payment for delivery order with 4 fries 1`] = `
Array [
  Object {
    "delivery": 0.875,
    "fries": 2.245,
    "name": undefined,
    "price": 9.99,
    "tax": 0.44539497633782305,
    "tip": 1.8352499999999998,
    "total": 15.390644976337823,
    "userId": undefined,
  },
  Object {
    "delivery": 0.875,
    "fries": 2.245,
    "name": undefined,
    "price": 12.99,
    "tax": 0.5546050236621769,
    "tip": 2.28525,
    "total": 18.949855023662177,
    "userId": undefined,
  },
  Object {
    "delivery": 0.875,
    "fries": 2.245,
    "name": undefined,
    "price": 9.99,
    "tax": 0.44539497633782305,
    "tip": 1.8352499999999998,
    "total": 15.390644976337823,
    "userId": undefined,
  },
  Object {
    "delivery": 0.875,
    "fries": 2.245,
    "name": undefined,
    "price": 12.99,
    "tax": 0.5546050236621769,
    "tip": 2.28525,
    "total": 18.949855023662177,
    "userId": undefined,
  },
]
`;

exports[`generate payment for delivery order with 5 fries 1`] = `
Array [
  Object {
    "delivery": 0.7,
    "fries": 2.494,
    "name": undefined,
    "price": 9.99,
    "tax": 0.3495939512741529,
    "tip": 1.8725999999999998,
    "total": 15.406193951274153,
    "userId": undefined,
  },
  Object {
    "delivery": 0.7,
    "fries": 2.494,
    "name": undefined,
    "price": 12.99,
    "tax": 0.43360403248389806,
    "tip": 2.3226,
    "total": 18.940204032483898,
    "userId": undefined,
  },
  Object {
    "delivery": 0.7,
    "fries": 2.494,
    "name": undefined,
    "price": 9.99,
    "tax": 0.3495939512741529,
    "tip": 1.8725999999999998,
    "total": 15.406193951274153,
    "userId": undefined,
  },
  Object {
    "delivery": 0.7,
    "fries": 2.494,
    "name": undefined,
    "price": 12.99,
    "tax": 0.43360403248389806,
    "tip": 2.3226,
    "total": 18.940204032483898,
    "userId": undefined,
  },
  Object {
    "delivery": 0.7,
    "fries": 2.494,
    "name": undefined,
    "price": 12.99,
    "tax": 0.43360403248389806,
    "tip": 2.3226,
    "total": 18.940204032483898,
    "userId": undefined,
  },
]
`;

exports[`generate payment for delivery order with large fries 1`] = `
Array [
  Object {
    "delivery": 1.1666666666666667,
    "fries": 2.66,
    "name": undefined,
    "price": 9.99,
    "tax": 0.6847090663058186,
    "tip": 1.8975,
    "total": 16.39887573297249,
    "userId": undefined,
  },
  Object {
    "delivery": 1.1666666666666667,
    "fries": 2.66,
    "name": undefined,
    "price": 12.99,
    "tax": 0.8470906630581867,
    "tip": 2.3475,
    "total": 20.011257329724856,
    "userId": undefined,
  },
  Object {
    "delivery": 1.1666666666666667,
    "fries": 2.66,
    "name": undefined,
    "price": 5.99,
    "tax": 0.46820027063599456,
    "tip": 1.2975,
    "total": 11.58236693730266,
    "userId": undefined,
  },
]
`;

exports[`generate payment for delivery single order no fries 1`] = `
Array [
  Object {
    "delivery": 3.5,
    "fries": 0,
    "name": undefined,
    "price": 9.99,
    "tax": 2,
    "tip": 1.4985,
    "total": 16.988500000000002,
    "userId": undefined,
  },
]
`;

exports[`generate payment for delivery single order with fries 1`] = `
Array [
  Object {
    "delivery": 3.5,
    "fries": 3.49,
    "name": undefined,
    "price": 9.99,
    "tax": 2,
    "tip": 2.022,
    "total": 21.002,
    "userId": undefined,
  },
]
`;

exports[`generate payment for delivery varying orders 1`] = `
Array [
  Object {
    "delivery": 0.875,
    "fries": 2.245,
    "name": undefined,
    "price": 12.99,
    "tax": 0.5445933869526363,
    "tip": 2.28525,
    "total": 18.939843386952635,
    "userId": undefined,
  },
  Object {
    "delivery": 0.875,
    "fries": 0,
    "name": undefined,
    "price": 6.49,
    "tax": 0.2319928507596068,
    "tip": 0.9735,
    "total": 8.570492850759607,
    "userId": undefined,
  },
  Object {
    "delivery": 0.875,
    "fries": 0,
    "name": undefined,
    "price": 14.49,
    "tax": 0.5179624664879356,
    "tip": 2.1734999999999998,
    "total": 18.056462466487936,
    "userId": undefined,
  },
  Object {
    "delivery": 0.875,
    "fries": 2.245,
    "name": undefined,
    "price": 17.49,
    "tax": 0.7054512957998212,
    "tip": 2.96025,
    "total": 24.27570129579982,
    "userId": undefined,
  },
]
`;

exports[`generate payment for pickup order with 4 fries 1`] = `
Array [
  Object {
    "delivery": 0,
    "fries": 2.245,
    "name": undefined,
    "price": 9.99,
    "tax": 0.44539497633782305,
    "tip": 0,
    "total": 12.680394976337823,
    "userId": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 2.245,
    "name": undefined,
    "price": 12.99,
    "tax": 0.5546050236621769,
    "tip": 0,
    "total": 15.789605023662176,
    "userId": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 2.245,
    "name": undefined,
    "price": 9.99,
    "tax": 0.44539497633782305,
    "tip": 0,
    "total": 12.680394976337823,
    "userId": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 2.245,
    "name": undefined,
    "price": 12.99,
    "tax": 0.5546050236621769,
    "tip": 0,
    "total": 15.789605023662176,
    "userId": undefined,
  },
]
`;

exports[`generate payment for pickup order with 5 fries 1`] = `
Array [
  Object {
    "delivery": 0,
    "fries": 2.494,
    "name": undefined,
    "price": 9.99,
    "tax": 0.3495939512741529,
    "tip": 0,
    "total": 12.833593951274153,
    "userId": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 2.494,
    "name": undefined,
    "price": 12.99,
    "tax": 0.43360403248389806,
    "tip": 0,
    "total": 15.917604032483897,
    "userId": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 2.494,
    "name": undefined,
    "price": 9.99,
    "tax": 0.3495939512741529,
    "tip": 0,
    "total": 12.833593951274153,
    "userId": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 2.494,
    "name": undefined,
    "price": 12.99,
    "tax": 0.43360403248389806,
    "tip": 0,
    "total": 15.917604032483897,
    "userId": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 2.494,
    "name": undefined,
    "price": 12.99,
    "tax": 0.43360403248389806,
    "tip": 0,
    "total": 15.917604032483897,
    "userId": undefined,
  },
]
`;

exports[`generate payment for pickup order with large fries 1`] = `
Array [
  Object {
    "delivery": 0,
    "fries": 2.66,
    "name": undefined,
    "price": 9.99,
    "tax": 0.6847090663058186,
    "tip": 0,
    "total": 13.33470906630582,
    "userId": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 2.66,
    "name": undefined,
    "price": 12.99,
    "tax": 0.8470906630581867,
    "tip": 0,
    "total": 16.497090663058188,
    "userId": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 2.66,
    "name": undefined,
    "price": 5.99,
    "tax": 0.46820027063599456,
    "tip": 0,
    "total": 9.118200270635995,
    "userId": undefined,
  },
]
`;

exports[`generate payment for pickup single order no fries 1`] = `
Array [
  Object {
    "delivery": 0,
    "fries": 0,
    "name": undefined,
    "price": 9.99,
    "tax": 2,
    "tip": 0,
    "total": 11.99,
    "userId": undefined,
  },
]
`;

exports[`generate payment for pickup single order with fries 1`] = `
Array [
  Object {
    "delivery": 0,
    "fries": 3.49,
    "name": undefined,
    "price": 9.99,
    "tax": 2,
    "tip": 0,
    "total": 15.48,
    "userId": undefined,
  },
]
`;

exports[`generate payment for pickup varying orders 1`] = `
Array [
  Object {
    "delivery": 0,
    "fries": 2.245,
    "name": undefined,
    "price": 12.99,
    "tax": 0.5445933869526363,
    "tip": 0,
    "total": 15.779593386952635,
    "userId": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 0,
    "name": undefined,
    "price": 6.49,
    "tax": 0.2319928507596068,
    "tip": 0,
    "total": 6.721992850759607,
    "userId": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 0,
    "name": undefined,
    "price": 14.49,
    "tax": 0.5179624664879356,
    "tip": 0,
    "total": 15.007962466487935,
    "userId": undefined,
  },
  Object {
    "delivery": 0,
    "fries": 2.245,
    "name": undefined,
    "price": 17.49,
    "tax": 0.7054512957998212,
    "tip": 0,
    "total": 20.44045129579982,
    "userId": undefined,
  },
]
`;
